first commit- add header

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <h1 class="header">Blake Harrison</h1>
 
   Welcome to the HTML Portfolio Project
 
