--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-  <h1 class="header">Blake Harrison</h1>
+  <header class="header">
+  <h1>Blake Harrison</h1>
+  <h2>Web Developer</h2>
+</header>
 
   Welcome to the HTML Portfolio Project
 
