personal information added

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,30 @@
 </head>
 <body>
   <header class="header">
-  <h1>Blake Harrison</h1>
-  <h2>Web Developer</h2>
-</header>
+    <h1>Blake Harrison</h1>
+    <h2>Web Developer</h2>
+  </header>
+  <div class="tagline">
+    <h3>Who I Am</h3>
+    <p>There are few things sweeter than seeing your hard work pay off in the form of a clean beautifly crafted web page come to life on the Web! My favorite language to code in is JavaScript.
+    To me JavaScript is the breath of life that makes the difference between a piece of pager and a dynamic web site.</p>
+  </div>
+  <div class="skills">
+    <h3>What I Know</h3>
+    <p>I truely enjoy writing front-end code. This is what people see when they come to your site and without good front-end development,
+    the first impression you will make or break the users experience.</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaSript</li>
+      <li>PHP</li>
+      <li>AngularJS</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>How to Reach Me</h3>
+    <p>The best way to reach me is through email. Or see some of my work on <a href="https://github.com/blaketharrison">Github</a></p>
+  </div>
 
   Welcome to the HTML Portfolio Project
 
